--- a/HighscoreServer/.project
+++ b/HighscoreServer/.project
@@ -3,6 +3,7 @@
 	<name>HighscoreServer</name>
 	<comment></comment>
 	<projects>
+		<project>HighscorePersistenceManagement</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
