--- a/MenschApp/.classpath
+++ b/MenschApp/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry exported="true" kind="lib" path="D:/eclipse_workspace/SE_Project/MenschApp/libs/ksoap2-android-assembly-2.6.4-jar-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/git/SE_Project/MenschApp/libs/ksoap2-android-assembly-2.6.4-jar-with-dependencies.jar"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
